<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:context=".ui.bilgi.BilgiFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="3dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hayvan3"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="Hayvan Hakları Bildirgesi"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>

                <LinearLayout
                    android:id="@+id/expandableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/hayvan_haklari"
                        android:textColor="#000000"
                        android:textSize="15sp"></TextView>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"></View>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="#88888888"></View>

                <Button
                    android:id="@+id/btnExpand"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:text="OKU"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_ok"></Button>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="20dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/hayvan2"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="Hayvana Şiddet Cezaları"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"></TextView>

                    <LinearLayout
                        android:id="@+id/expandableLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/hayvan_ceza"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="15sp"></TextView>


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="15dp"></View>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="#88888888"></View>

                    <Button
                        android:id="@+id/btnExpand2"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:text="OKU"
                        android:textColor="@color/white"
                        app:icon="@drawable/ic_ok"></Button>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_marginTop="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/hayvan4"></ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:text="Hayvanları Korumak İçin Ne Yapmalıyız ?"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            android:textStyle="bold"></TextView>

                        <LinearLayout
                            android:id="@+id/expandableLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/hayvan_koruma"
                                android:textAlignment="center"
                                android:textColor="#000000"
                                android:textSize="15sp"></TextView>


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginEnd="15dp"></View>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="15dp"
                            android:background="#88888888"></View>

                        <Button
                            android:id="@+id/btnExpand3"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:text="OKU"
                            android:textColor="@color/white"
                            app:icon="@drawable/ic_ok"></Button>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:layout_marginTop="20dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/hayvan1"></ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="8dp"
                                android:text="Sokak Hayvanlarına Yardım Etmenin 10 yolu"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                android:textStyle="bold"></TextView>

                            <LinearLayout
                                android:id="@+id/expandableLayout4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:orientation="vertical"
                                android:visibility="gone">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:text="@string/hayvan_yardim"
                                    android:textAlignment="center"
                                    android:textColor="#000000"
                                    android:textSize="15sp"></TextView>


                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="0.5dp"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="15dp"
                                    android:layout_marginEnd="15dp"></View>

                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginEnd="15dp"
                                android:background="#88888888"></View>

                            <Button
                                android:id="@+id/btnExpand4"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:text="OKU"
                                android:textColor="@color/white"
                                app:icon="@drawable/ic_ok"></Button>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:layout_marginTop="20dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/hayvan5"></ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="8dp"
                                android:text="Bir Kap Su Projesi"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                android:textStyle="bold"></TextView>

                            <LinearLayout
                                android:id="@+id/expandableLayout5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:orientation="vertical"
                                android:visibility="gone">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:text="@string/kap"
                                    android:textAlignment="center"
                                    android:textColor="#000000"
                                    android:textSize="15sp"></TextView>


                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="0.5dp"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="15dp"
                                    android:layout_marginEnd="15dp"></View>

                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginEnd="15dp"
                                android:background="#88888888"></View>

                            <Button
                                android:id="@+id/btnExpand5"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:layout_marginBottom="75dp"
                                android:text="OKU"
                                android:textColor="@color/white"
                                app:icon="@drawable/ic_ok"></Button>

                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>


